# aurora-contracts-sdk

./: .gitignore  .gitmodules  CODEOWNERS  README.md
aurora-rust-sdk/: Cargo.toml
aurora-rust-sdk/aurora-sdk/: Cargo.toml
aurora-rust-sdk/aurora-sdk-integration-tests/: Cargo.toml
aurora-rust-sdk/aurora-sdk-integration-tests/src/: lib.rs  wnear.rs
aurora-rust-sdk/aurora-sdk-integration-tests/src/aurora_engine/: erc20.rs  mod.rs  repo.rs
aurora-rust-sdk/aurora-sdk-integration-tests/src/tests/: mod.rs
aurora-rust-sdk/aurora-sdk-integration-tests/src/utils/: cargo.rs  ethabi.rs  forge.rs  mod.rs
aurora-rust-sdk/aurora-sdk/src/: lib.rs
aurora-rust-sdk/src/: lib.rs
aurora-solidity-sdk/src/: AuroraSdk.sol  Borsh.sol  Codec.sol  Types.sol  Utils.sol
aurora-solidity-sdk/test/: AuroraSdk.t.sol
docs/: AuroraFromNear.md  NearFromAurora.md
examples/auto-bounty/: README.md
examples/auto-bounty/integration-tests/: Cargo.toml
examples/auto-bounty/integration-tests/src/: lib.rs
examples/auto-bounty/solidity/src/: Bounty.sol  IOracle.sol  Oracle.sol
examples/ft-refund/: Cargo.toml  README.md
examples/ft-refund/integration-tests/: Cargo.toml
examples/ft-refund/integration-tests/src/: lib.rs
examples/ft-refund/near-contract/: Cargo.toml
examples/ft-refund/near-contract/src/: lib.rs
examples/ft-refund/solidity-contract/src/: FtRefund.sol  IEvmErc20.sol
examples/ft-refund/test-token/: Cargo.toml
examples/ft-refund/test-token/src/: lib.rs
examples/social-db-from-aurora/: README.md
examples/social-db-from-aurora/contract/: foundry.toml  remappings.txt
examples/social-db-from-aurora/contract/src/: SocialDB.sol
examples/social-db-from-aurora/integration-tests/: Cargo.toml
examples/social-db-from-aurora/integration-tests/src/: lib.rs
examples/tic-tac-toe/: Cargo.toml  README.md
examples/tic-tac-toe/integration-tests/: Cargo.toml
examples/tic-tac-toe/integration-tests/src/: lib.rs
examples/tic-tac-toe/near-contract/: Cargo.toml
examples/tic-tac-toe/near-contract/src/: lib.rs  logic.rs  types.rs
examples/tic-tac-toe/solidity-contract/lib/: aurora-solidity-sdk
examples/tic-tac-toe/solidity-contract/src/: TicTacToe.sol
examples/uniswap-from-near/: Cargo.toml  README.md
examples/uniswap-from-near/common-types/: Cargo.toml
examples/uniswap-from-near/common-types/src/: lib.rs
examples/uniswap-from-near/contract/: Cargo.toml
examples/uniswap-from-near/contract/src/: lib.rs
examples/uniswap-from-near/integration-tests/: Cargo.toml
examples/uniswap-from-near/integration-tests/src/: lib.rs  uniswap_utils.rs
