[package]
name = "aurora-sdk-integration-tests"
description = "Rust library for writing integration tests for NEAR smart contracts interacting with the Aurora Engine."
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "9a0058c8fd3b60fb68758e9edd6a42a7f43a0165", default-features = false, features = ["std"] }
aurora-engine-precompiles = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "9a0058c8fd3b60fb68758e9edd6a42a7f43a0165", default-features = false, features = ["std"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "9a0058c8fd3b60fb68758e9edd6a42a7f43a0165", default-features = false, features = ["std"] }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "9a0058c8fd3b60fb68758e9edd6a42a7f43a0165" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "9a0058c8fd3b60fb68758e9edd6a42a7f43a0165", default-features = false, features = ["std"] }
base64 = "0.21"
ethabi = "18"
hex = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
workspaces = { version = "0.9", package = "near-workspaces" }
